feat: reset password endpoint

--- a/docs/modules/onecx-iam-bff/pages/onecx-iam-bff-docs.adoc
+++ b/docs/modules/onecx-iam-bff/pages/onecx-iam-bff-docs.adoc
@@ -54,6 +54,7 @@ app:
         permissions:
           user:
             read: permission on all GET requests and POST search
+            write: permission on PUT, POST, PATCH requests, where objects are saved or updated
           role:
             read: permission on all GET requests and POST search
 ----
