fix: sonar issues

--- a/docs/modules/onecx-iam-bff/pages/onecx-iam-bff-docs.adoc
+++ b/docs/modules/onecx-iam-bff/pages/onecx-iam-bff-docs.adoc
@@ -20,7 +20,8 @@ quarkus.openapi-generator.codegen.spec.onecx_iam_kc_svc_yaml.base-package=gen.or
 quarkus.openapi-generator.codegen.spec.onecx_iam_kc_svc_yaml.return-response=true
 quarkus.openapi-generator.codegen.spec.onecx_iam_kc_svc_yaml.additional-api-type-annotations=@org.eclipse.microprofile.rest.client.annotation.RegisterClientHeaders
 quarkus.openapi-generator.codegen.spec.onecx_iam_kc_svc_yaml.additional-model-type-annotations=@io.quarkus.runtime.annotations.RegisterForReflection;
-%prod.quarkus.rest-client.onecx_iam_kc_svc_yaml.providers=io.quarkus.oidc.client.reactive.filter.OidcClientRequestReactiveFilter
+quarkus.openapi-generator.codegen.spec.onecx_iam_kc_svc_yaml.enable-security-generation=false
+%prod.quarkus.rest-client.onecx_iam_kc_svc.providers=io.quarkus.oidc.client.reactive.filter.OidcClientRequestReactiveFilter
 %prod.quarkus.oidc-client.client-id=${quarkus.application.name}
 ----
 ====
@@ -61,5 +62,8 @@ app:
     keycloak:
       client:
         enabled: true
+        spec:
+          kcConfig:
+            defaultClientScopes: [ ocx-ia:all, ocx-pm:read  ]
 ----
 
