--- a/docs/modules/onecx-iam-bff/pages/onecx-iam-bff-extensions.adoc
+++ b/docs/modules/onecx-iam-bff/pages/onecx-iam-bff-extensions.adoc
@@ -86,12 +86,6 @@ h| Version
 | https://github.com/1000kit/tkit-quarkus/blob/2.36.0/docs/modules/tkit-quarkus/pages/includes/tkit-quarkus-rest-context.adoc[Link]
 | 2.36.0
 
-| tkit-quarkus-jpa
-
-| https://1000kit.github.io/tkit-quarkus/current/tkit-quarkus/tkit-quarkus-jpa.html[Link]
-| https://github.com/1000kit/tkit-quarkus/blob/2.36.0/docs/modules/tkit-quarkus/pages/includes/tkit-quarkus-jpa.adoc[Link]
-| 2.36.0
-
 | quarkus-hibernate-validator
 
 | https://quarkus.io/guides/validation[Link]
@@ -131,6 +125,18 @@ h| Version
 | quarkus-container-image-docker
 
 | https://quarkus.io/guides/container-image[Link]
+| https://github.com/quarkusio/quarkusio.github.io/blob/develop/_generated-doc/latest/config/quarkus-container-image-docker.adoc[Link]
+| 3.15.1
+
+
+| quarkus-rest-client-oidc-filter
+
+| 
+| 
+| 3.15.1
+
+
+|===/quarkus.io/guides/container-image[Link]
 | https://github.com/quarkusio/quarkusio.github.io/blob/develop/_generated-doc/latest/config/quarkus-container-image-docker.adoc[Link]
 | 3.15.1
 
