--- a/docs/modules/onecx-iam-bff/pages/onecx-iam-bff-docs.adoc
+++ b/docs/modules/onecx-iam-bff/pages/onecx-iam-bff-docs.adoc
@@ -66,6 +66,13 @@ app:
         enabled: true
         spec:
           kcConfig:
-            defaultClientScopes: [ ocx-ia:all, ocx-pm:read  ]
+            defaultClientScopes: [ ocx-ia:all, ocx-pm:read ]
+----
+
+ client:
+        enabled: true
+        spec:
+          kcConfig:
+            defaultClientScopes: [ ocx-ia:all, ocx-pm:read ]
 ----
 
