--- a/docs/modules/onecx-iam-bff/pages/onecx-iam-bff-extensions.adoc
+++ b/docs/modules/onecx-iam-bff/pages/onecx-iam-bff-extensions.adoc
@@ -86,6 +86,12 @@ h| Version
 | https://github.com/1000kit/tkit-quarkus/blob/3.3.0/docs/modules/tkit-quarkus/pages/includes/tkit-quarkus-rest-context.adoc[Link]
 | 3.3.0
 
+| quarkus-cache
+
+| https://quarkus.io/guides/cache[Link]
+| https://github.com/quarkusio/quarkusio.github.io/blob/develop/_generated-doc/latest/config/quarkus-cache.adoc[Link]
+| 3.20.1
+
 | quarkus-hibernate-validator
 
 | https://quarkus.io/guides/validation[Link]
@@ -143,15 +149,7 @@ h| Version
 | 2.40.0
 
 
-|===ttps://github.com/quarkusio/quarkusio.github.io/blob/develop/_generated-doc/latest/config/quarkus-container-image-docker.adoc[Link]
-| 3.15.1
-
-
-| quarkus-rest-client-oidc-filter
-
-| 
-| 
-| 3.15.1
+|=== 3.15.1
 
 
 |===
