--- a/docs/modules/onecx-iam-bff/pages/onecx-iam-bff-docs.adoc
+++ b/docs/modules/onecx-iam-bff/pages/onecx-iam-bff-docs.adoc
@@ -23,7 +23,7 @@ quarkus.openapi-generator.codegen.spec.onecx_iam_svc_yaml.additional-api-type-an
 quarkus.openapi-generator.codegen.spec.onecx_iam_svc_yaml.additional-model-type-annotations=@io.quarkus.runtime.annotations.RegisterForReflection;
 quarkus.openapi-generator.codegen.spec.onecx_iam_svc_yaml.enable-security-generation=false
 %prod.quarkus.rest-client.onecx_iam_svc.providers=io.quarkus.oidc.client.reactive.filter.OidcClientRequestReactiveFilter
-%prod.quarkus.oidc-client.client-id=${ONECX_OIDC_CLIENT_CLIENT_ID:${quarkus.application.name}}
+%prod.quarkus.oidc-client.client-id=${quarkus.application.name}
 ----
 ====
 
@@ -47,8 +47,6 @@ Default values
 ----
 app:
   name: bff
-  template:
-    oidc_client_id: "ONECX_OIDC_CLIENT_CLIENT_ID"
   image:
     repository: "onecx/onecx-iam-bff"
   operator:
@@ -72,6 +70,11 @@ app:
       client:
         enabled: true
         spec:
+          kcConfig:
+            defaultClientScopes: [ ocx-ia:all, ocx-pm:read ]
+----
+
+spec:
           kcConfig:
             defaultClientScopes: [ ocx-ia:all, ocx-pm:read ]
 ----
